--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             text-align: center;
             margin-bottom: 60px;
         }
-        .conference-badge {
+        .doc-badge {
             display: inline-block;
             background: linear-gradient(135deg, #6b21a8, #7c3aed);
             padding: 8px 24px;
@@ -93,67 +93,105 @@
         }
         .nav-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 24px;
+            grid-template-columns: repeat(auto-fit, minmax(340px, 1fr));
+            gap: 20px;
             margin-top: 40px;
         }
         .nav-card {
-            background: rgba(255,255,255,0.05);
-            border: 1px solid rgba(255,255,255,0.1);
-            border-radius: 16px;
-            padding: 30px;
+            background: rgba(20, 20, 35, 0.8);
+            border: 1px solid rgba(255,255,255,0.08);
+            border-radius: 12px;
+            padding: 24px;
             cursor: pointer;
             transition: all 0.3s ease;
             text-decoration: none;
             color: inherit;
-            display: block;
+            display: flex;
+            flex-direction: column;
+            min-height: 160px;
         }
         .nav-card:hover {
-            transform: translateY(-5px);
-            border-color: #00ff88;
-            background: rgba(0,255,136,0.05);
+            transform: translateY(-3px);
+            border-color: rgba(0,255,136,0.4);
+            background: rgba(0,255,136,0.03);
+            box-shadow: 0 8px 30px rgba(0,0,0,0.3);
+        }
+        .nav-card-header {
+            display: flex;
+            align-items: center;
+            gap: 14px;
+            margin-bottom: 14px;
         }
         .nav-card-number {
-            font-size: 3rem;
-            font-weight: 700;
-            color: rgba(255,255,255,0.1);
-            margin-bottom: 10px;
-        }
-        .nav-card-title {
-            font-size: 1.3rem;
-            font-weight: 600;
-            color: #fff;
-            margin-bottom: 10px;
-        }
-        .nav-card-desc {
-            color: #888;
-            font-size: 0.95rem;
-            line-height: 1.5;
-        }
-        .nav-card-pages {
-            margin-top: 15px;
             font-size: 0.85rem;
-            color: #666;
-        }
-        .stats-bar {
-            display: flex;
-            justify-content: center;
-            gap: 60px;
-            margin: 40px 0;
-            flex-wrap: wrap;
-        }
-        .stat-item {
-            text-align: center;
-        }
-        .stat-value {
-            font-size: 2.5rem;
             font-weight: 700;
             color: #00ff88;
+            background: rgba(0,255,136,0.1);
+            padding: 6px 12px;
+            border-radius: 6px;
+            letter-spacing: 0.5px;
+            flex-shrink: 0;
         }
-        .stat-label {
+        .nav-card-title {
+            font-size: 1.1rem;
+            font-weight: 600;
+            color: #fff;
+            line-height: 1.3;
+        }
+        .nav-card-desc {
+            color: #9ca3af;
             font-size: 0.9rem;
-            color: #888;
-            margin-top: 5px;
+            line-height: 1.6;
+            flex-grow: 1;
+        }
+        .nav-card-bullets {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+            flex-grow: 1;
+        }
+        .nav-card-bullets li {
+            color: #9ca3af;
+            font-size: 0.85rem;
+            line-height: 1.5;
+            padding-left: 16px;
+            position: relative;
+            margin-bottom: 6px;
+        }
+        .nav-card-bullets li::before {
+            content: "•";
+            color: #00ff88;
+            font-weight: bold;
+            position: absolute;
+            left: 0;
+        }
+        .nav-card:hover .nav-card-bullets li {
+            color: #c0c0c0;
+        }
+        .nav-card-footer {
+            display: flex;
+            justify-content: flex-end;
+            align-items: center;
+            margin-top: 16px;
+            padding-top: 12px;
+            border-top: 1px solid rgba(255,255,255,0.05);
+        }
+        .nav-card-pages {
+            font-size: 0.75rem;
+            color: #6b7280;
+            text-transform: uppercase;
+            letter-spacing: 0.5px;
+        }
+        .nav-card-arrow {
+            color: #00ff88;
+            margin-left: 8px;
+            opacity: 0;
+            transform: translateX(-5px);
+            transition: all 0.2s ease;
+        }
+        .nav-card:hover .nav-card-arrow {
+            opacity: 1;
+            transform: translateX(0);
         }
     </style>
 </head>
@@ -165,77 +203,77 @@
                 {
                     num: "01",
                     title: "Motivation: AI & Storage",
-                    desc: "Why GPUs are at the heart of AI training and inference, and how storage needs to be accessible to GPUs.",
+                    bullets: ["GPU-centric AI infrastructure", "Training vs inference data flows", "Storage accessibility challenges"],
                     pages: "Pages 3-5",
                     link: "01_motivation.html"
                 },
                 {
                     num: "02", 
                     title: "CPU vs GPU I/O Workloads",
-                    desc: "Fundamental differences between CPU and GPU architectures - threads, warps, SIMT, and why it matters for storage.",
+                    bullets: ["Thread models: CPU vs GPU", "Warps, SIMT architecture", "Why NVMe was built for CPU"],
                     pages: "Pages 6-15",
                     link: "02_cpu_vs_gpu.html"
                 },
                 {
                     num: "03",
                     title: "Thread Sync & Polling",
-                    desc: "How NVMe's thread synchronization hurts GPU utilization, and why polling beats interrupts for SIMT architecture.",
+                    bullets: ["NVMe sync overhead impact", "Interrupts kill GPU utilization", "Polling-first for SIMT"],
                     pages: "Pages 16-22",
                     link: "03_sync_problem.html"
                 },
                 {
                     num: "04",
-                    title: "Challenges & Call to Action",
-                    desc: "Key NVMe challenges to address, Q&A topics, and what needs to change for GPU-optimized storage access.",
+                    title: "Implementation Challenges",
+                    bullets: ["Current NVMe limitations", "Protocol change requirements", "GPU-optimized recommendations"],
                     pages: "Pages 23-26",
                     link: "04_challenges.html"
                 },
                 {
                     num: "05",
                     title: "Expert Deep Dive",
-                    desc: "Protocol internals, latency breakdown, PCIe analysis, GPUDirect Storage architecture, and proposed NVMe enhancements.",
+                    bullets: ["Protocol internals & latency", "PCIe topology analysis", "GPUDirect Storage architecture"],
                     pages: "Expert Analysis",
                     link: "05_expert_deep_dive.html"
                 },
                 {
                     num: "06",
                     title: "Implementation Patterns",
-                    desc: "AI/ML workload patterns, current solutions (GDS, kvikIO), optimization strategies, and future directions.",
+                    bullets: ["AI/ML workload patterns", "GDS, kvikIO solutions", "Optimization strategies"],
                     pages: "Practical Guide",
                     link: "06_implementation.html"
                 },
                 {
                     num: "07",
                     title: "Solutions Architecture",
-                    desc: "Problem&rarr;Solution mapping. CXL memory semantics and Ultra Ethernet (UEC) fabric for GPU-storage access.",
+                    bullets: ["Problem→Solution mapping", "CXL memory semantics", "Ultra Ethernet (UEC) fabric"],
                     pages: "Complete Roadmap",
                     link: "07_solutions.html"
                 },
                 {
                     num: "08",
                     title: "Advanced & Hard Truths",
-                    desc: "Reality checks: CXL DRAM vs NAND, computational storage, ZNS/KV/FDP, DPU offload, GPU vendor divergence, honest timelines.",
+                    bullets: ["CXL DRAM vs NAND reality", "Computational storage limits", "Honest vendor timelines"],
                     pages: "Expert Reality Check",
                     link: "08_advanced_solutions.html"
                 },
                 {
                     num: "09",
                     title: "Production Reality",
-                    desc: "NVMe-oF, Linux stack, K8s/CSI, security, TCO. NEW: ZNS/KV command sets, AMD ROCm + Intel GPU paths, MLPerf Storage benchmarks.",
-                    pages: "Complete Deployment Guide",
+                    bullets: ["NVMe-oF & Linux stack", "K8s/CSI integration", "Security, TCO, MLPerf"],
+                    pages: "Deployment Guide",
                     link: "09_production_reality.html"
                 },
                 {
                     num: "10",
                     title: "Expert Storage Guide",
-                    desc: "ML framework storage patterns, NUMA/PCIe topology, power management, debugging tools, checkpoint optimization, SSD endurance.",
-                    pages: "Storage Expert Reference",
+                    bullets: ["NUMA/PCIe topology", "Checkpoint optimization", "SSD endurance & debugging"],
+                    pages: "Storage Reference",
                     link: "10_expert_storage_guide.html"
                 },
                 {
                     num: "11",
                     title: "ML Frameworks Integration",
-                    desc: "DeepSpeed ZeRO-Infinity, Megatron-LM distributed checkpointing, PyTorch FSDP, JAX/Flax patterns, framework-specific optimizations.",
+                    bullets: ["DeepSpeed ZeRO-Infinity", "Megatron-LM checkpointing", "PyTorch FSDP, JAX patterns"],
                     pages: "Framework Deep Dive",
                     link: "11_ml_frameworks.html"
                 }
@@ -244,49 +282,46 @@
             return (
                 <div className="container">
                     <div className="header">
-                        <div className="conference-badge">SNIA DEVELOPER CONFERENCE 2025</div>
+                        <div className="doc-badge">GPU-NVMe Technical Documentation</div>
                         <h1 className="main-title">
                             Why does NVMe need to evolve<br/>
                             for efficient storage access from GPUs?
                         </h1>
                         <div className="authors">
-                            Reference: SNIA SDC 2025 presentation by Chandra Guda, Suresh Rajgopal, Pierre Labat (Micron Technology)
+                            Comprehensive Technical Guide
                         </div>
                     </div>
 
                     <div className="preface-section">
                         <h2 className="preface-title">Preface</h2>
                         <p className="preface-text">
-                            Traditional NVMe Protocol was designed with <span className="highlight">CPU cores and hyperthreading</span> in mind. 
-                            With advent of GPUs and NV-Link/UA-links speeds reaching <span className="highlight">TB/s</span> connection 
-                            to the fastest SSDs which are still in <span className="highlight-red">multi-GB/s</span>. 
-                            Storage bottlenecks need to be addressed where the storage protocol needs to be reviewed.
-                            <span className="highlight-red"> (NVMe Protocol)</span>
+                            NVMe scales well with host parallelism via many submission/completion queues, but it assumes a 
+                            <span className="highlight">host-driven control plane</span> (doorbells, completions, polling/interrupts) 
+                            that is largely CPU-mediated. Modern GPU workloads can consume data extremely fast, and when the 
+                            input/checkpoint pipeline isn't carefully engineered (format, caching, batching, overlap), 
+                            <span className="highlight-red">latency and control-plane overhead</span> across the storage stack 
+                            can become visible bottlenecks. Evolving GPU-centric storage is less about raw SSD peak GB/s and 
+                            more about reducing submission/completion overhead, improving async/batched I/O, and aligning 
+                            storage semantics with GPU pipelines.
                         </p>
-                    </div>
-
-                    <div className="stats-bar">
-                        <div className="stat-item">
-                            <div className="stat-value">TB/s</div>
-                            <div className="stat-label">GPU Interconnect Speed</div>
-                        </div>
-                        <div className="stat-item">
-                            <div className="stat-value" style={{color: '#ff6b6b'}}>GB/s</div>
-                            <div className="stat-label">SSD Speed (100x slower)</div>
-                        </div>
-                        <div className="stat-item">
-                            <div className="stat-value">1-64</div>
-                            <div className="stat-label">I/O Agent Warps (not 270K)</div>
-                        </div>
                     </div>
 
                     <div className="nav-grid">
                         {sections.map((section, idx) => (
                             <a key={idx} href={section.link} className="nav-card">
-                                <div className="nav-card-number">{section.num}</div>
-                                <div className="nav-card-title">{section.title}</div>
-                                <div className="nav-card-desc">{section.desc}</div>
-                                <div className="nav-card-pages">{section.pages}</div>
+                                <div className="nav-card-header">
+                                    <div className="nav-card-number">{section.num}</div>
+                                    <div className="nav-card-title">{section.title}</div>
+                                </div>
+                                <ul className="nav-card-bullets">
+                                    {section.bullets.map((bullet, i) => (
+                                        <li key={i}>{bullet}</li>
+                                    ))}
+                                </ul>
+                                <div className="nav-card-footer">
+                                    <div className="nav-card-pages">{section.pages}</div>
+                                    <span className="nav-card-arrow">→</span>
+                                </div>
                             </a>
                         ))}
                     </div>
